# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 2.1 ==
  * SSH public key from downloaded pair filename should end in .pub (#681)
  * Mark uploaded RSplecs as private by default (#421)
  * Handle malformed XML in RSpec upload (#720)
  * Remove unnecessary host reference (#755)
  * Output account request passwords in monospace font (#732)
  * Show project page to members only (#727)
  * Remove hardcoded hostnames in openid configuration (#287)
  * Update the supported gcf release to 2.2.1-threaded-ticket313 (#746)
  * Add new GPO sandboxes to utility scripts (#745)
  * Allow case-insensitive upload of member email addresses (#713)
  * Fix sliver status page (resource status) (#429)

== 2.0 ==
  * Fix Google Analytics string to be a global variable (#743)
  * Remove obsolete settings file (#741)
  * Add Resources page should include tool-showmessage (#738)
  * Fix minor bugs in new portal CSS (#737)
  * Don't install ad RSpecs and map.php (#736)
  * Fix glossary to link to Trac wiki (#703)
  * Fix copyright notice in map.php (#735)
  * Add a script to check account existence (#700)
  * Remove fake slice and project email addresses (#729)
  * Create GENI resource map for monitor display (#734)
  * Update the portal's CSS (#717)
  * Add Google Analytics functionality (#718)
  * Make button-like things be buttons (#175)
  * Create interactive map of resources (#28)
  * Fix Slice/Project Membership functionality according to feedback (#496)
  * Enable VERIFYHOST in put_message (#660)
  * Add script to add an arbitrary attribute to a user (#701)
  * Change "Resource Specification" to RSpec on Profile and Add
  Resources pages (#707)

== 1.9.6 ==
  * Add ExoGENI FIU and UH racks to service registry (#714)

== 1.9.5 ==
  * slice expiration shouldn't pick a date past project expiration (#614)
  * Fix tracebacks in omni_php.py when creating a sliver fails (#649,#321)