@@ -49,9 +49,6 @@ $portal_private_key_file = '/usr/share/geni-ch/portal/portal-key.pem';
 // set to match the current GENI CH SA
 $portal_max_slice_renewal_days = 185;
 
-// set to true to enable Google Analytics tracking in header
-$portal_enable_analytics = true;
-
 //----------------------------------------------------------------------
 // Set error level to include user errors (generated by the portal).
 //----------------------------------------------------------------------
